--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -11,10 +11,10 @@
             width: 100%;
             justify-self: center;
             max-width: 23rem;
-            border-radius: 999rem;
+            border-radius: 0.7rem;
             padding: 0.25rem 0.75rem;
             border-color: rgba(0,0,0,0.5);
-            text-align: center;
+            text-align: left;
             font-size: 1.2rem;
             margin-bottom: 1.75rem;
         }
